<resources>
    <!-- Titulo do aplicativo. [CHAR LIMIT=12] -->
    <string name="app_name">PodCasts</string>

    <!--Grupos-->
    <!-- PodCasts -->
    <string name="grupo_podCasts">Home</string>
    <!--Categorias -->
    <string name="grupo_categorias">Categorias</string>
    <!--AudioBooks -->
    <string name="grupo_audioBooks">AudioBooks</string>
    <!--Downloads -->
    <string name="grupo_downloads">Downloads</string>
    <!--Buscar -->
    <string name="grupo_buscar">Buscar</string>
    <!--Sobre -->
    <string name="grupo_playing">Sobre</string>


    <!-- TxtView Definição -->
    <string name="txt_denificao">Definição</string>


    <!--Definições de cada Tela: -->
    <!--Home-->
    <string name="txt_definicao_home">Tela de podcasts recomendados no formado de quadros,
        alinhados em gridViews, cada quadro corresponde a um podcast. clicando no quadro a tela
        de Play será chamada.</string>

    <!--Categorias-->
    <string name="txt_definicao_categoria">Definição da tela categorias</string>
    <!--AudioBooks-->
    <string name="txt_definicao_audiobooks">Definição da tela audiobooks</string>
    <!--Downloads-->
    <string name="txt_definicao_downloads">Definição da tela downloads</string>
    <!--Buscar-->
    <string name="txt_definicao_buscar">Pesquisar podcasts através do campo busca e mostrar na tela
            os resultados da consulta. Ao clicar no quadro(Play) a tela Tocando será aberta</string>

    <!--Playing-->
    <string name="txt_definicao_playing">Tela de reprodução dos podcasts, onde no topo fica uma
            imagem que faz referencia ao mesmo, abaixo algumas informações sobre e opções de player
            de audio como o botão play, avançar  e pausar.</string>


    <!-- TxtView Obstaculo Técnicos da Implementação -->
    <string name="txt_obstaculo_implementacao">Obstáculos implementação:</string>

    <!--Descrição dos obstáculos Técnicos: -->
    <!--Home-->
    <string name="txt_obstaculos_home">Gerenciar as recomendações com base no histórico do usuário
            e criar arraysAdapters personalizados para a GridView.</string>

    <!--Categorias-->
    <string name="txt_obstaculos_categoria">Descrição dos obstáculos: categorias</string>
    <!--AudioBooks-->
    <string name="txt_obstaculos_audiobooks">Descrição dos obstáculos: audiobooks</string>
    <!--Downloads-->
    <string name="txt_obstaculos_downloads">Descrição dos obstáculos: downloads</string>
    <!--Buscar-->
    <string name="txt_obstaculos_buscar">Criar querys de consulta no banco de dados para retornar
            nessa tela os resultados.</string>

    <!--PlayingPodcast-->
    <string name="txt_obstaculos_playing">Gerenciar os podcasts e o acesso a base de dados
            na rede, além do gerenciamento de áudio em si.</string>


    <!-- TxtView Solução Potencial: -->
    <string name="txt_solucao_potencial">Solucão Potencial</string>


    <!--Descrição da solucão na implementacao: -->
    <!--Home-->
    <string name="txt_solucao_home">Utilizar uma API de acesso e controle de banco de dados,
            e com base no histórico recomendar os podcasts similares.</string>


    <!--Categorias-->
    <string name="txt_solucao_categoria">Descrição da solucão: categorias</string>
    <!--AudioBooks-->
    <string name="txt_solucao_audiobooks">Descrição da solucão: audiobooks</string>
    <!--Downloads-->
    <string name="txt_solucao_downloads">Descrição da solucão: downloads</string>
    <!--Buscar-->
    <string name="txt_solucao_buscar">Utilizar o método OnCreateOptionMenu e definir um objeto
            onQueryTextListener para realizar as buscas e retornar a tela com os resultados.</string>

    <!--PlayingPodcast-->
    <string name="txt_solucao_playing">Utilizar uma API para gerenciamento do banco de dados e
            e o gerenciamento de reprodução como o MEDIAPLAYER.</string>

    <!-- Button -->
    <string name="btn_play">Play</string>



    <!-- Description images -->
    <string name="description_image">Imagem de ilustração do podcast</string>
    <string name="descriprion_albums">Imagem que referencia um icone para acesso aos albums</string>
    <string name="descriprion_search">Imagem que referencia um icone para acesso a pesquisa</string>
    <string name="descriprion_payment">Imagem que referencia um icone para acesso a pagamentos</string>
</resources>