<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.valdir.podcastapp.AlbumsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_payment"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentTop="true"
                android:paddingRight="5dp"
                android:layout_toLeftOf="@+id/image_search"
                android:layout_toStartOf="@+id/image_search"
                android:contentDescription="@string/descriprion_payment"
                android:src="@drawable/payment" />
                android:src="@drawable/albums" />
            <ImageView
                android:id="@+id/image_search"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/descriprion_search"
                android:src="@drawable/search" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--titulo, qual tela o usuário está -->
            <TextView
                style="@style/TitleStyle"
                android:text="@string/txt_denificao" />

            <!--Definições de Tela -->
            <TextView
                style="@style/DescriptionStyle"
                android:text="@string/txt_definicao_categoria" />

            <!--txt Obstaculo para implementação-->
            <TextView
                style="@style/TitleStyle"
                android:text="@string/txt_obstaculo_implementacao" />

            <!--Descrição dos obstaculos para a tela categoria -->
            <TextView
                style="@style/DescriptionStyle"
                android:text="@string/txt_obstaculos_categoria" />

            <!--txt Solução potencial-->
            <TextView
                style="@style/TitleStyle"
                android:text="@string/txt_solucao_potencial" />

            <!--Descrição da solução encontrada -->
            <TextView
                style="@style/DescriptionStyle"
                android:text="@string/txt_solucao_categoria" />

        </LinearLayout>


        </LinearLayout>



</android.support.constraint.ConstraintLayout>
