<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.valdir.podcastapp.PlayingPodcastActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- ícone para acesso à tela pagamento -->
            <ImageView
                android:id="@+id/image_payment"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentTop="true"
                android:paddingRight="5dp"
                android:layout_toLeftOf="@+id/image_albums"
                android:layout_toStartOf="@+id/image_albums"
                android:contentDescription="@string/descriprion_payment"
                android:src="@drawable/payment" />

            <!-- ícone para acesso à tela albúns -->
            <ImageView
                android:id="@+id/image_albums"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:paddingRight="5dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/image_search"
                android:layout_toStartOf="@+id/image_search"
                android:contentDescription="@string/descriprion_albums"
                android:src="@drawable/albums" />

            <!-- ícone para acesso à tela busca -->
            <ImageView
                android:id="@+id/image_search"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/descriprion_search"
                android:src="@drawable/search" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Imagem que corresponda a capa do podcast que está sendo executado -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/description_image"
                android:src="@drawable/play" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--titulo, qual tela o usuário está -->
                <TextView
                    style="@style/TitleStyle"
                    android:text="@string/txt_denificao" />

                <!--Definições de Tela -->
                <TextView
                    style="@style/DescriptionStyle"
                    android:text="@string/txt_definicao_playing" />

                <!--txt Obstaculo para implementação-->
                <TextView
                    style="@style/TitleStyle"
                    android:text="@string/txt_obstaculo_implementacao" />

                <!--Descrição dos obstaculos para a tela sobre -->
                <TextView
                    style="@style/DescriptionStyle"
                    android:text="@string/txt_obstaculos_playing" />

                <!--txt Solução potencial-->
                <TextView
                    style="@style/TitleStyle"
                    android:text="@string/txt_solucao_potencial" />

                <!--Descrição da solução encontrada -->
                <TextView
                    style="@style/DescriptionStyle"
                    android:text="@string/txt_solucao_playing" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
